[package]
name = "melissa-graphql"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.16", features = ["compat"] }
juniper = "0.15.7"
tokio = { version = "1.10.0", features = ["rt-multi-thread", "macros"] } 
futures-macro = "0.3.16"
uuid = "0.8.2"
actix-web = "3"
actix-cors = "0.4.0"
serde_derive = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking"] }
csv = "1.1"

